--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,686 +1,27 @@
-/*=================== Variables ===================*/
-$font17px: 1.0625rem
-$font18px: 1.125rem
-$font20px: 1.25rem
-$font22px: 1.375rem
-$font32px: 2rem
-$font38px: 2.375rem
-$font48px: 3rem
-$font128px: 8rem
-
-/*=================== Mixins ===================*/
-=display($property)
-  display: -webkit-$property
-  display: -ms-$property
-  display: $property
-
-=transform($property)
-  -webkit-transform: $property
-  -ms-transform: $property
-  transform: $property
-
-=ul-columns($property)
-  -moz-column-count: $property
-  -webkit-column-count: $property
-  column-count: $property
-
-/*=================== Fonts ===================*/
-@font-face
-  font-family: "Fira sans", sans-serif
-  src: url("../fonts/FiraSans-Light.ttf") format("ttf")
-  src: url("../fonts/firasans-light-webfont.eot") format("eot")
-  src: url("../fonts/firasans-light-webfont.svg") format("svg")
-  src: url("../fonts/firasans-light-webfont.woff") format("woff")
-  src: url("../fonts/firasans-light-webfont.woff2") format("woff2")
-  src: url("../fonts/FiraSans-bold.ttf") format("ttf")
-  src: url("../fonts/firasans-bold-webfont.eot") format("eot")
-  src: url("../fonts/firasans-bold-webfont.svg") format("svg")
-  src: url("../fonts/firasans-bold-webfont.woff") format("woff")
-  src: url("../fonts/firasans-bold-webfont.woff2") format("woff2")
-
-
-.container
-  padding: 0 10px
-  max-width: 1200px
-  width: 100%
-  margin: 0 auto
-
-.h2-title
-  font-size: $font48px
-  font-weight: 700
-
-/*=================== Header ===================*/
-header
-  padding-bottom: 114px
-  background: url("../img/header_bg.jpg") center -50px no-repeat fixed
-  color: #fff
-
-  nav.container
-    +display(flex)
-    margin-bottom: 115px
-
-    justify-content: space-between
-
-    .header__logo
-      a
-        img
-          max-width: 144px
-          max-height: 137px
-          min-width: 50px
-          min-height: 40px
-          width: 100%
-
-    .header__navigation
-      position: relative
-      padding-top: 71px
-
-      .header__navigation__contacts
-        position: absolute
-        top: 25px
-        right: 0
-        +display(flex)
-        margin-bottom: 25px
-
-        .header__navigation__contacts_numbers
-          transition: all 1s ease
-
-          &:active
-            transform: scale(.97)
-
-          &:hover
-            a
-              background-color: rgb(219, 160, 105)
-
-          a
-            position: relative
-            margin-left: 35px
-            padding: 10px 20px 10px 52px
-            color: #fff
-            border: 1px #DBA069 solid
-            border-radius: 3px
-            transition: all 1s ease
-
-
-
-            &:before
-              content: url("../img/phone.svg")
-              margin-right: 10px
-              position: absolute
-              top: 6px
-              left: 20px
-
-      .header__navigation__nav_menu
-        ul
-          +display(flex)
-
-          li
-            position: relative
-            margin-left: 50px
-
-            a
-              color: #fff
-
-            &:after
-              content: ""
-              position: absolute
-              left: 0
-              bottom: -5px
-              height: 4px
-              width: 1%
-              transition: all .5s ease
-
-            &:active
-              transform: scale(.97)
-
-            &:hover
-              &:after
-                width: 100%
-                background-color: #DBA069
-
-  section.header__banner.container
-    +display(flex)
-
-    .header__banner__info
-      width: 100%
-      max-width: 846px
-      font-size: $font20px
-
-      h1
-        margin-bottom: 20px
-        font-size: $font38px
-        font-weight: 700
-        color: #ffffff
-
-
-      a
-        max-width: 285px
-        display: block
-        margin-bottom: 40px
-        padding: 20px 30px
-        font-weight: 700
-        color: #000
-        background-color: #DBA069
-        transition: all .5s ease
-
-        &:hover
-          color: #ffffff
-
-        &:active
-          transform: scale(.97)
-          background-color: #b48559
-
-      h3
-        margin-bottom: 20px
-        font-size: $font32px
-        font-weight: 700
-        color: #ffffff
-
-
-      .header__banner__info__box
-        +display(flex)
-
-        div
-          +display(flex)
-          margin: auto 0
-          color: #ffffff
-
-          div:first-child
-            font-size: $font128px
-            color: #ffffff
-
-        div:first-child
-          margin-right: 26px
-          color: #ffffff
-
-    .header__banner__deadlines
-      width: 100%
-      max-width: 296px
-      line-height: $font22px
-
-      p
-        color: #ffffff
-
-        b
-          color: #ffffff
-
-      p:not(:last-child)
-        margin-bottom: 20px
-
-/* =================== Main =================== */
-main
-
-  // =============== About project =============== //
-  section._1_about-project.container
-    padding: 127px 0 52px 0
-
-    .about-project__wrap
-      +display(flex)
-      justify-content: space-between
-
-      .about-project__wrap-inner
-        .about-project__about-company
-
-          h3
-            font-size: $font20px
-            font-weight: 700
-
-          p
-            font-size: $font20px
-            line-height: $font22px
-
-      .about-project__wrap-inner:first-child
-        max-width: 680px
-        width: 100%
-
-        .about-project__about-company
-          margin-top: 70px
-
-      .about-project__wrap-inner:last-child
-        max-width: 440px
-        width: 100%
-
-        .about-project__company-logo__box
-          margin-bottom: 90px
-          max-width: 442px
-          max-height: 418px
-          width: 100%
-          height: 100%
-          position: relative
-
-          img.about-project__company-logo__img,
-          .about-project__company-logo__bg-color,
-          .about-project__company-logo__bg-dots
-            display: block
-            position: absolute
-            width: 100%
-            height: 100%
-            transition: all .5s ease
-            
-          img.about-project__company-logo__img
-            bottom: 10px
-            right: 15px
-            z-index: 3
-            
-          .about-project__company-logo__bg-color
-            bottom: 0
-            right: 0
-            z-index: 2
-            background-color: #842231
-            
-          .about-project__company-logo__bg-dots
-            top: 16px
-            left: 20px
-            z-index: 1
-            background: url("../img/3_location__dots.svg")
-
-        .about-project__company-logo__box:hover
-          img.about-project__company-logo__img
-            bottom: 33px
-            right: 42px
-
-          .about-project__company-logo__bg-dots
-            top: 40px
-            left: 40px
-
-  // =============== Slider =============== //
-  section._2_slider
-    padding: 40px 0 45px 0
-    background-color: rgba(132, 34, 49, 0.05)
-
-    .container
-      .slider__wrap
-        position: relative
-        overflow: hidden
-
-        .slider__slides
-          +display(flex)
-          width: 100%
-          overflow: hidden
-          transition: all 1s ease
-
-          .slider__box
-            padding: 30px 50px
-            width: 100%
-            background: url("../img/dots.svg") 70px 51px no-repeat
-            transition: all .5s ease
-
-
-            .slider__box__inner
-              padding-left: 50px
-              +display(flex)
-              justify-content: space-between
-              max-width: 1000px
-
-              img:first-child
-                max-width: 600px
-
-              img:last-child
-                max-width: 400px
-
-        .slider__prev-btn,
-        .slider__next-btn
-          position: absolute
-          top: 50%
-          transform: translate( 0, -50%)
-          z-index: 2
-          cursor: pointer
-          transition: all .5s ease
-
-          img
-            position: relative
-            z-index: 1
-
-        .slider__prev-btn
-          left: 0
-
-        .slider__next-btn
-          right: 0
-
-        .slider__prev-btn:active,
-        .slider__next-btn:active
-          img
-            transform: scale(.97)
-
-      .slider__wrap:hover
-        .slider__box
-          background: url("../img/dots.svg") 60px 61px no-repeat
-
-
-  // =============== Location =============== //
-  section._3_location.container
-    padding: 90px 0 140px 0
-    +display(flex)
-    justify-content: space-between
-
-    .location__content,
-    .location__map
-      max-width: 550px
-
-    .location__content
-      padding-top: 90px
-
-      h2
-        margin-bottom: 48px
-
-      p
-        font-size: $font20px
-        line-height: $font22px
-
-      p:not(:last-child)
-        margin-bottom: 25px
-
-    .location__map-box
-      width: 518px
-      height: 400px
-      position: relative
-
-      img.location__map__img,
-      .location__map__bg-color,
-      .location__map__bg-dots
-        display: block
-        position: absolute
-        width: 100%
-        height: 100%
-        transition: all .5s ease
-
-      .location__map__img
-        bottom: 10px
-        right: 15px
-        z-index: 3
-
-      .location__map__bg-color
-        bottom: 0
-        right: 0
-        background-color: #842231
-        z-index: 2
-
-      .location__map__bg-dots
-        top: 9px
-        left: 20px
-        z-index: 1
-        background: url("../img/3_location__dots.svg")
-
-    .location__map-box:hover
-      .location__map__img
-        bottom: 42px
-        right: 42px
-
-      .location__map__bg-dots
-        top: 56px
-        left: 43px
-
-  // =============== Advantages =============== //
-  section._4_advantages
-    position: relative
-
-    .container
-      max-width: 900px
-      padding: 60px 0 80px 0
-      position: relative
-
-      img.advantages__dots
-        position: absolute
-        top: -62px
-        left: -270px
-        z-index: 0
-
-      .advantages__bg
-        position: absolute
-        top: -4px
-        left: -270px
-        z-index: 1
-
-      .advantages__content-box
-        position: relative
-        z-index: 2
-
-        h2
-          margin-bottom: 40px
-
-        .advantages__imb-box
-          margin-bottom: 60px
-
-        ul
-          +ul-columns(2)
-
-          li
-            margin: 0 60px 50px 0
-            +display(flex)
-
-            img
-              margin-right: 15px
-              max-width: 56px
-
-            p
-              font-size: $font20px
-              line-height: $font22px
-
-        ul:last-child
-          +ul-columns(1)
-
-          li:last-child
-            width: 100%
-
-  // =============== Why nura =============== //
-  section._5_why-nura.container
-    padding-top: 99px
-    margin-bottom: 34px
-
-    h2
-      margin-bottom: 99px
-
-    .why__nura__content-box
-      +display(flex)
-
-      .why-nura__img-box
-        margin-right: 100px
-        position: relative
-        width: 453px
-        height: 400px
-
-        img.why-nura__img,
-        .why-nura__bg-color,
-        .why-nura__bg-dots
-          display: block
-          position: absolute
-          transition: all .5s ease
-
-        img.why-nura__img,
-        .why-nura__bg-color,
-        .why-nura__bg-dots
-          width: 100%
-          height: 100%
-
-        img.why-nura__img
-          bottom: 10px
-          left: 15px
-          z-index: 3
-
-        .why-nura__bg-color
-          bottom: 0
-          left: 0
-          z-index: 2
-          background-color: #842231
-
-        .why-nura__bg-dots
-          top: 9px
-          right: 25px
-          z-index: 1
-          background: url("../img/3_location__dots.svg")
-
-      .why-nura__img-box:hover
-        img.why-nura__img
-          bottom: 53px
-          left: 42px
-
-        .why-nura__bg-dots
-          top: 35px
-          right: 65px
-
-      ul:last-child
-        margin-left: 15px
-
-      ul
-        padding: 86px 0 124px 0
-        max-width: 336px
-
-        li
-          +display(flex)
-          margin-bottom: 40px
-
-          img
-            margin-right: 15px
-
-          span
-            b,
-            p
-              font-size: $font18px
-
-            p:last-child
-              margin-top: 20px
-
-  // =============== Technologies =============== //
-  section._6_technologies.container
-    padding-top: 127px
-
-    h2
-      margin-bottom: 43px
-      text-align: center
-
-    .technologies__content-box
-      +display(flex)
-      justify-content: space-between
-
-      ul:last-child
-        margin-top: 55px
-
-      ul
-        max-width: 500px
-
-        li
-          margin-bottom: 80px
-
-          img
-            margin-bottom: 32px
-
-          h3
-            margin-bottom: 12px
-            font-size: $font20px
-            font-weight: 700
-
-          p
-            font-size: $font18px
-            line-height: $font20px
-
-    .technologies__download-presentation
-      padding: 70px 150px
-      border: 8px #842231 solid
-      border-radius: 8px
-
-      h2
-        margin-bottom: 12px
-
-      p
-        margin-bottom: 36px
-        font-size: 1.3125rem
-        font-weight: 400
-        text-align: center
-
-      form
-        +display(flex)
-
-        input
-          padding: 32px 0 32px 58px
-          max-width: 280px
-          width: 100%
-          color: #7E868E
-          background-color: #E5E5E5
-          border-radius: 8px
-
-
-        input:not(:last-child)
-          margin-right: 20px
-
-        input:last-child
-          padding: 32px 0
-          font-size: $font18px
-          font-weight: 500
-          color: #ffffff
-          background-color: #842231
-          cursor: pointer
-
-  // =============== Payments =============== //
-  section._7_payments.container
-    padding-top: 131px
-    margin-bottom: 56px
-
-    h2
-      margin-bottom: 60px
-      text-align: center
-
-    >ul
-      margin: 0 auto
-      +display(flex)
-      justify-content: space-between
-      max-width: 883px
-      width: 100%
-      text-align: center
-
-      li
-        img
-          max-height: 80px
-          height: 100%
-          margin-bottom: 15px
-
-        p
-          font-size: 1.0625rem
-          font-weight: 700
-
-    .payments__address
-      margin-top: 100px
-      +display(flex)
-      justify-content: space-between
-
-      .payments__address__contacts
-        h2
-          margin-bottom: 30px
-
-        p
-          margin-bottom: 30px
-          font-size: $font18px
-
-        .payments__address__contacts-box
-          +display(flex)
-          justify-content: space-between
-
-          ul
-            margin-top: 3px
-            li
-              +display(flex)
-
-              img
-                margin-right: 12px
-
-            li:not(:last-child)
-              margin-bottom: 10px
-
-/*=================== Footer ===================*/
-footer
-  padding: 44px 0
-  background-color: #F9F4F4
-
-  .container
-    ul
-      +display(flex)
-      justify-content: center
-      max-width: 688px
-      width: 100%
-      margin: 0 auto
-
-      li
-        a
-          font-size: $font18px
-          line-height: $font22px
-
-      li:not(:last-child)
-        margin-right: 60px
+@import "fonts"
+@import "variables"
+@import "mixins"
+@import "nullstyle"
+
+//Page
+@import "common-styles"
+@import "./_header/header"
+@import "_1_about-project/_1_about-project"
+@import "./_2_slider/2_slider"
+@import "./_3_location/3_location"
+@import "./_4_advantages/4_advantages"
+@import "./_5_why-nura/5_why-nura"
+@import "./_6_technologies/6_technologies"
+@import "./_7_payments/7_payments"
+@import "_footer/footer"
+
+//Responsive
+@import "_header/media_header"
+@import "./_1_about-project/media_1"
+@import "./_2_slider/media_2"
+@import "./_3_location/media_3"
+@import "./_4_advantages/media_4"
+@import "./_5_why-nura/media_5"
+@import "./_6_technologies/media_6"
+@import "./_7_payments/media_7"
+@import "./_footer/media_footer"
