--- a/dest/css/main.css
+++ b/dest/css/main.css
@@ -1,6 +1,3 @@
-/*=================== Variables ===================*/
-/*=================== Mixins ===================*/
-/*=================== Fonts ===================*/
 @font-face {
   font-family: "Fira sans", sans-serif;
   src: url("../fonts/FiraSans-Light.ttf") format("ttf");
@@ -14,6 +11,91 @@
   src: url("../fonts/firasans-bold-webfont.woff") format("woff");
   src: url("../fonts/firasans-bold-webfont.woff2") format("woff2");
 }
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  color: #333;
+}
+
+*,
+*:before,
+*:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*:focus,
+*:active {
+  outline: none;
+}
+
+a:focus,
+a:active {
+  outline: none;
+}
+
+nav,
+footer,
+header,
+aside {
+  display: block;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  font-family: "Fira sans", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+input,
+button,
+textarea {
+  font-family: inherit;
+}
+
+input::-ms-clear {
+  display: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+a,
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
+img {
+  vertical-align: top;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-size: inherit;
+  font-weight: inherit;
+}
+
 .container {
   padding: 0 10px;
   max-width: 1200px;
@@ -26,7 +108,6 @@
   font-weight: 700;
 }
 
-/*=================== Header ===================*/
 header {
   padding-bottom: 114px;
   background: url("../img/header_bg.jpg") center -50px no-repeat fixed;
@@ -186,7 +267,6 @@ header section.header__banner.container .header__banner__deadlines p:not(:last-c
   margin-bottom: 20px;
 }
 
-/* =================== Main =================== */
 main section._1_about-project.container {
   padding: 127px 0 52px 0;
 }
@@ -257,6 +337,7 @@ main section._1_about-project.container .about-project__wrap .about-project__wra
   top: 40px;
   left: 40px;
 }
+
 main section._2_slider {
   padding: 40px 0 45px 0;
   background-color: rgba(132, 34, 49, 0.05);
@@ -320,6 +401,7 @@ main section._2_slider .container .slider__wrap .slider__next-btn:active img {
 main section._2_slider .container .slider__wrap:hover .slider__box {
   background: url("../img/dots.svg") 60px 61px no-repeat;
 }
+
 main section._3_location.container {
   padding: 90px 0 140px 0;
   display: -webkit- flex;
@@ -383,6 +465,7 @@ main section._3_location.container .location__map-box:hover .location__map__bg-d
   top: 56px;
   left: 43px;
 }
+
 main section._4_advantages {
   position: relative;
 }
@@ -426,7 +509,6 @@ main section._4_advantages .container .advantages__content-box ul li {
 }
 main section._4_advantages .container .advantages__content-box ul li img {
   margin-right: 15px;
-  max-width: 56px;
 }
 main section._4_advantages .container .advantages__content-box ul li p {
   font-size: 1.25rem;
@@ -440,6 +522,7 @@ main section._4_advantages .container .advantages__content-box ul:last-child {
 main section._4_advantages .container .advantages__content-box ul:last-child li:last-child {
   width: 100%;
 }
+
 main section._5_why-nura.container {
   padding-top: 99px;
   margin-bottom: 34px;
@@ -509,8 +592,13 @@ main section._5_why-nura.container .why__nura__content-box ul li {
   display: flex;
   margin-bottom: 40px;
 }
-main section._5_why-nura.container .why__nura__content-box ul li img {
+main section._5_why-nura.container .why__nura__content-box ul li div {
+  display: -webkit- flex;
+  display: -ms- flex;
+  display: flex;
   margin-right: 15px;
+  justify-items: start;
+  height: 100%;
 }
 main section._5_why-nura.container .why__nura__content-box ul li span b,
 main section._5_why-nura.container .why__nura__content-box ul li span p {
@@ -519,8 +607,11 @@ main section._5_why-nura.container .why__nura__content-box ul li span p {
 main section._5_why-nura.container .why__nura__content-box ul li span p:last-child {
   margin-top: 20px;
 }
+
 main section._6_technologies.container {
   padding-top: 127px;
+  position: relative;
+  z-index: 2;
 }
 main section._6_technologies.container h2 {
   margin-bottom: 43px;
@@ -591,6 +682,7 @@ main section._6_technologies.container .technologies__download-presentation form
   background-color: #842231;
   cursor: pointer;
 }
+
 main section._7_payments.container {
   padding-top: 131px;
   margin-bottom: 56px;
@@ -652,8 +744,13 @@ main section._7_payments.container .payments__address .payments__address__contac
 main section._7_payments.container .payments__address .payments__address__contacts .payments__address__contacts-box ul li:not(:last-child) {
   margin-bottom: 10px;
 }
+main .technologies__bg-logo {
+  position: absolute;
+  bottom: -284px;
+  right: -43px;
+  z-index: -1;
+}
 
-/*=================== Footer ===================*/
 footer {
   padding: 44px 0;
   background-color: #F9F4F4;
