--- a/app/index.pug
+++ b/app/index.pug
@@ -153,7 +153,7 @@ body
                             p Each owner of the cottage is given the opportunity to build additional buildings on his #[br] land plot: a bathhouse, a sauna, a summer kitchen, etc.
 
 
-        section._5_why-nura.container
+        //section._5_why-nura.container
             h2.h2-title Why NURA ELITE?
             .why__nura__content-box
                 .why-nura__img-box
@@ -188,7 +188,7 @@ body
                             p Centralized water supply, power supply and sewerage.
                             p The heating system and hot water is one common gas tank for the entire town, functioning at the expense of gas.
 
-        section._6_technologies.container
+        //section._6_technologies.container
             h2.h2-title Building technology
             .technologies__content-box
                 ul
@@ -230,7 +230,7 @@ body
             .technologies__bg-logo
                 img(src="./img/bg-logo__cherry.svg")
 
-        section._7_payments.container
+        //section._7_payments.container
             h2.h2-title Payment methods
             ul
                 li
@@ -264,7 +264,7 @@ body
                                 a(href="https://www.instagram.com/nura_premier/" target="_blank") @nura.premier
                         img(src="./img/7_payments_qr-code.svg")
 
-    footer
+    //footer
         .container
             ul
                 li
