--- a/app/sass/_3_location/_3_location.sass
+++ b/app/sass/_3_location/_3_location.sass
@@ -5,7 +5,7 @@ main
     justify-content: space-between
 
     .location__content,
-    .location__map
+    .location__map-box
       max-width: 550px
 
     .location__content
