--- a/app/sass/_variables.sass
+++ b/app/sass/_variables.sass
@@ -9,8 +9,9 @@ $font48px: 3rem
 $font128px: 8rem
 
 //Screen sizes
-$breakpoint_xl: 1200px
+$breakpoint_xl: 1140px
 $breakpoint_lg: 1024px
 $breakpoint_md: 768px
 $breakpoint_sm: 576px
-$breakpoint_xs: 425px
+$breakpoint_xs: 480px
+$breakpoint_xxs: 320px
