--- a/app/sass/_2_slider/_2_slider.sass
+++ b/app/sass/_2_slider/_2_slider.sass
@@ -27,6 +27,10 @@ main
               justify-content: space-between
               max-width: 1000px
 
+              img
+                display: block
+                margin: 0 auto
+
               img:first-child
                 max-width: 600px
 
