--- a/app/sass/_header/_header.sass
+++ b/app/sass/_header/_header.sass
@@ -1,12 +1,11 @@
 header
-  padding-bottom: 114px
+  padding: 0 0 114px
   background: url("../img/header_bg.jpg") center -50px no-repeat fixed
   color: #fff
 
   nav.container
     +display(flex)
     margin-bottom: 115px
-
     justify-content: space-between
 
     .header__logo
@@ -68,22 +67,22 @@ header
             a
               color: #fff
 
+          .header__navigation__nav_menu:after
+            content: ""
+            position: absolute
+            left: 0
+            bottom: -5px
+            height: 4px
+            width: 1%
+            transition: all .5s ease
+
+          &:active
+            transform: scale(.97)
+
+          &:hover
             &:after
-              content: ""
-              position: absolute
-              left: 0
-              bottom: -5px
-              height: 4px
-              width: 1%
-              transition: all .5s ease
-
-            &:active
-              transform: scale(.97)
-
-            &:hover
-              &:after
-                width: 100%
-                background-color: #DBA069
+              width: 100%
+              background-color: #DBA069
 
   section.header__banner.container
     +display(flex)
