--- a/app/index.pug
+++ b/app/index.pug
@@ -119,7 +119,7 @@ body
                 .location__map__bg-dots
 
 
-        section._4_advantages
+        //section._4_advantages
             .container
                 img.advantages__dots(src="./img/dots.svg")
                 img.advantages__bg(src="./img/4_advantages_bg.svg")
